tests/reference/ast_new-for1-887432e.stderr
syntax error: Token ':' is unexpected here
 --> tests/parser/for1.py:4:16
  |
4 | for x in fruits:
  |                ^ 
